DevTools: Fix keyboard a11y issues in application tab websql console
a.	Originally: User could not use shift-tab to tab out of the console (tab trapping issue).
	Problem: Focus on the container was tied to focus on the prompt.
	After Fix: Shift+Tab works as expected, lets you tab out of the container.

b.	Originally: There was a tab stop in each of the datgrid query outputs.
	Problem: If you used shift+tab, it would go through each of the data grids.
                 Same for tabbing, unless you tabbed directly into the container.
	After Fix: Can use up and down arrow keys to navigate table outputs.
                   Can use context menu to sort the datagrids as expected.
                   Only the container of the datagrids get focus, dataGrids do not.

c.      Add a visible selection border around selected DataGrid query outputs.

d.      Originally: Up and Down arrow keys were handled by the input as Home and End keys.
	Problem: Could not reach previous error messages and prompt inputs.
                 Couldn't read information even in browse mode.
	After Fix: Browse mode works as expected.

Gif uploaded here: https://imgur.com/a/m8Es4o9

Bug: 963183

--- a/front_end/resources/resourcesPanel.css
+++ b/front_end/resources/resourcesPanel.css
@@ -118,10 +118,14 @@
 
 .database-query-result {
     position: relative;
-    padding: 1px 22px 1px 24px;
+    padding: 1px 22px 1px 22px;
     min-height: 16px;
-    margin-left: -24px;
+    margin-left: -22px;
     padding-right: 0;
+}
+
+.database-query-result[data-keyboard-focus="true"]:focus {
+    outline: 1px solid var(--accent-color-hover);
 }
 
 .database-query-result.error {
